# learning-microservices

./: README.md
lms/: .gitignore  API_DOCUMENTATION.md  ARCHITECTURE.md  COMPLETION_REPORT.txt  DELIVERY_SUMMARY.txt  INDEX.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  START_HERE.txt  docker-compose.yml  setup.sh
lms/go/: Dockerfile  README.md  go.mod  main.go
lms/java/: Dockerfile  README.md  pom.xml
lms/java/src/main/java/com/lms/controller/: AnalyticsController.java  AuthController.java  CmsController.java  HealthController.java  PyqController.java  SyllabusController.java
lms/java/src/main/resources/: application.properties
lms/nodejs/: README.md  package.json
lms/nodejs/src/: server.js
lms/nodejs/src/routes/: analytics.js  auth.js  cms.js  pyq.js  syllabus.js
lms/rust/: Cargo.toml  Dockerfile  README.md
lms/rust/src/: main.rs
lms/rust/src/handlers/: analytics.rs  auth.rs  cms.rs  mod.rs  pyq.rs  syllabus.rs
